[package]
name = "tranrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bytes = "1.5.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
rss = "2.0.7"
tokio = "1.36.0"
