[package]
name = "tranrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
feed-rs = "1.4.0"
html2md = "0.2.14"
log = "0.4.20"
log4rs = "1.3.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
